# CeLEry

./: LICENSE  README.md  tutorial.ipynb
CeLEry_package/: CeLEryPy.toml  README.md  pyproject.toml  setup.cfg
CeLEry_package/CeLEry/: ClusterVAE.py  DNN.py  __init__.py  data_augmentation.py  fit_functions.py  layers.py  types_.py  util.py  util_Mouse.py
CeLEry_package/CeLEryPy/: DNN.py  SpaCluster.py  TrainerExe.py  __init__.py  data_augmentation.py  datasetgenemap.py  fit_functions.py  layers.py  util.py  util_Mouse.py
CeLEry_package/CeLEryPy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
code_paper/1_LIBD/: CeLEry_train_Scenario1and2.py  CeLEry_train_Scenario3and4.py  LIBDVisual.R  LIBDacc.R  README.md  prediction.py  preprocess.py
code_paper/2_Alzheimer/: CeLEry_train.py  README.md  preprocess.py  test.py
code_paper/3_Mouse_10x_Visium/: Mouse_CeLEry.ipynb  Mouse_Tangram.ipynb  Mouse_novosparc.ipynb  Mouse_spotOTsc.ipynb
code_paper/4_Mouse_brain_MERFISH/: CeLEry_brain.ipynb  CeLEry_figure 6_scenario 2.ipynb  CeLEry_figure 6_scenario 3.ipynb  README.md  SpaOTsc_brain.ipynb  Tangram_brain.ipynb  brain_result.ipynb  novoSpaRc_brain.ipynb
code_paper/5_liver_MERFISH/: CeLEry_liver.ipynb  README.md  SpaOTsc_liver.ipynb  Tangram_liver.ipynb  liver_result.ipynb  novoSpaRc_liver.ipynb
code_paper/6_breast_cancer_10x_Xenium/2D_locationRecovery/: Xenium_BreastCancer_CELERY_Rep1_Scheme4_2DRecovery.ipynb  Xenium_BreastCancer_Tangram_Rep1_Scheme4_2DRecovery.ipynb  Xenium_BreastCancer_novosparc_Rep1_Scheme4_2DRecovery.ipynb  Xenium_BreastCancer_spaOTsc_Rep1_Scheme4_2DRecovery.ipynb
code_paper/6_breast_cancer_10x_Xenium/Domain_prediction/: Xenium_BreastCancer_novosparc_Rep1_Scheme2_domainPred.ipynb  (+1 more)
code_paper/8_mouse_single_cell_prediction/: Mouse_sc_analysis.py  Mouse_sc_analysis_spaOTsc_novosparc.ipynb  analysis-results.py  preprocessing.py
pretrainmodel/Biogen/: Pretrained_model_075B_probmat.csv
tutorial/: BiogenPretrain.ipynb  BiogenPretrain.md  tutorial.ipynb  tutorial.md
(+1 files in other folders)
