[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CeLEryPy"
version = "1.1.3"
description = "Leverage spatial transcriptomics data to recover cell locations in single-cell RNA RNA-seq"
readme = "README.md"
authors = [{ name = "Qihuang Zhang", email = "qihuang.zh@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["CeLEry", "spatial transcriptomics", "scRNA-seq"]
dependencies = [
    "torch >= 1.8",
    "pandas >= 1.4",
    "numpy >= 1.20",
    "scipy",
    "tqdm",
    "scanpy >= 1.5",
    "scikit-image",
    "anndata",
    "sklearn",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/QihuangZhang/CeLEry"

