[metadata]
name = CeLEryPy
version = 0.0.1
author = Qihuang Zhang, Jian Hu, David Dai, Edward B. Lee, Rui Xiao, Mingyao Li 
author_email = qihuang.zhang@pennmedicine.upenn.edu
description = CeLEry provides a generic framework and can be implemented in multiple tasks depending on the research objectives, including the spatial coordinates discovery as well as the layer discovery. It can make use of the information of multiple tissues of spatial transcriptomics data. Thorough assessments exhibit that CeLEry achieves a leading performance compared to the state-of-art methods.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QihuangZhang/CeLEry
project_urls =
    Bug Tracker = https://github.com/QihuangZhang/CeLEry/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src